<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="221dp"
        android:layout_height="181dp"
        android:layout_gravity="center"
        android:src="@drawable/logo2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/connecttoyouraccount"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/login_et_login"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/dropshadow"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/nomuser"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/dropshadow"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/motpasse"
        android:inputType="textPassword"
        android:paddingLeft="20dp" />
    <Button
        android:id="@+id/login_et_btn"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/noaccount"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login_tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/subscribe"
            android:textColor="@color/button_color"
            android:textStyle="bold"
            android:textSize="14sp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/login_tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/help"
        android:textColor="@color/button_color"
        android:textStyle="bold"
        android:textSize="16sp"/>


</LinearLayout>